src/java/antlr/GqlParser.java
// Generated from GqlParser.g4 by ANTLR 4.9.1

    package src.java.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ON=1, COMMENT=2, LINE_COMMENT=3, WS=4, UNSIGNED_INTEGER=5, KEYWORD=6, 
		ABS=7, ACOS=8, ADD=9, AGGREGATE=10, ALIAS=11, ALL=12, AND=13, ANY=14, 
		ARRAY=15, AS=16, ASC=17, ASCENDING=18, ASIN=19, AT=20, ATAN=21, AVG=22, 
		BINARY=23, BOOLEAN=24, BOTH=25, BY=26, CALL=27, CASE=28, CATALOG=29, CEIL=30, 
		CEILING=31, CHARACHTER=32, CHARACTER_LENGTH=33, CLEAR=34, CLONE=35, CLOSE=36, 
		COLLECT=37, COMMIT=38, CONSTRAINT=39, CONSTANT=40, CONSTRCUT=41, COPY=42, 
		COS=43, COSH=44, COST=45, COT=46, COUNT=47, CURRENT_DATE=48, CURRENT_GRAPH=49, 
		CURRENT_PROPERTY_GRAPH=50, CURRENT_ROLE=51, CURRENT_SCHEMA=52, CURRENT_TIME=53, 
		CURRENT_TIMESTAMP=54, CURRENT_USER=55, CREATE=56, DATE=57, DATETIME=58, 
		DECIMAL=59, DEFAULT=60, DEGREES=61, DELETE=62, DETACH=63, DESC=64, DESCENDING=65, 
		DIRECTORIES=66, DIRECTORY=67, DISTINCT=68, DO=69, DROP=70, DURATION=71, 
		ELSE=72, END=73, ENDS=74, EMPTY_BINDING_TABLE=75, EMPTY_GRAPH=76, EMPTY_PROPERTY_GRAPH=77, 
		EMPTY_TABLE=78, EXCEPT=79, EXISTS=80, EXISTING=81, EXP=82, EXPLAIN=83, 
		FALSE=84, FILTER=85, FLOAT=86, FLOAT32=87, FLOAT64=88, FLOAT128=89, FLOOR=90, 
		FOR=91, FROM=92, FUNCTOPM=93, FUNCTIONS=94, GQLSTATUS=95, GROUP=96, HAVING=97, 
		HOME_GRAPH=98, HOME_PROPERTY_GRAPH=99, HOME_SCHEMA=100, IN=101, INSERT=102, 
		INTEGER=103, INTEGER8=104, INTEGER16=105, INTEGER32=106, INTEGER64=107, 
		INTEGER128=108, INTERSECT=109, IF=110, IS=111, KEEP=112, LEADING=113, 
		LEFT=114, LENGTH=115, LET=116, LIKE=117, LIMIT=118, LIST=119, LN=120, 
		LOCALDATETIME=121, LOCALTIME=122, LOCALTIMESTAMP=123, LOG=124, LOG10=125, 
		LOWER=126, MANDATORY=127, MAP=128, MATCH=129, MERGE=130, MAX=131, MIN=132, 
		MOD=133, MULTI=134, MULTIPLE=135, MULTISET=136, NEW=137, NOT=138, NORMALIZE=139, 
		NOTHING=140, NULL=141, OCTET_LENGTH=142, OF=143, OFFSET=144, OPTIONAL=145, 
		OR=146, ORDER=147, ORDERED=148, OTHERWISE=149, PARAMETER=150, PATH=151, 
		PATHS=152, PARTITION=153, POWER=154, PROCEDURE=155, PROCEDURES=156, PRODUCT=157, 
		PROFILE=158, PROJECT=159, QUERIES=160, QUERY=161, RADIANS=162, RCORD=163, 
		RECORDS=164, REFERENCE=165, REMOVE=166, RENAME=167, REPLACE=168, REQUIRE=169, 
		RESET=170, RESULT=171, RETURN=172, RIGHT=173, ROLLBACK=174, SCALAR=175, 
		SCHEMA=176, SCHEMAS=177, SCHEMATA=178, SELECT=179, SESSION=180, SET=181, 
		SIN=182, SINGLE=183, SINH=184, SQRT=185, START=186, STARTS=187, STRING=188, 
		SUBSTRING=189, SUM=190, TAN=191, TANH=192, THEN=193, TIME=194, TIMESTAMP=195, 
		TRAILING=196, TRIM=197, TRUE=198, TRUNCATE=199, UNION=200, UNIT=201, UNIT_BINDING_TABLE=202, 
		UNIT_TABLE=203, UNIQUE=204, UNNEST=205, UNKNOWN=206, UNWIND=207, UPPER=208, 
		USE=209, VALUE=210, VALUES=211, WHEN=212, WHERE=213, WITH=214, WORKING_GRAPH=215, 
		XOR=216, YIELD=217, ZERO=218, ACYCLIC=219, BINDING=220, CLASS_ORIGIN=221, 
		COMMAND_FUNCTION=222, COMMAND_FUNCTION_CODE=223, CONDITION_NUMBER=224, 
		CONNECTING=225, DESTINATION=226, DIRECTED=227, EDGE=228, EDGES=229, FINAL=230, 
		GRAPH=231, GRAPHS=232, GROUPS=233, INDEX=234, LABEL=235, LABELS=236, MESSAGE_TEXT=237, 
		MUTABLE=238, NFC=239, NFD=240, NFKC=241, NFKD=242, NODE=243, NODES=244, 
		NORMALIZED=245, NUMBER=246, ONLY=247, ORDINALITY=248, PATTERN=249, PATTERNS=250, 
		PROPERTY=251, PROPERTIES=252, READ=253, RELATIONSHIP=254, RELATIONSHIPS=255, 
		RETURNED_GQLSTATUS=256, SHORTEST=257, SIMPLE=258, SUBCLASS_ORIGIN=259, 
		TABLE=260, TABLES=261, TIES=262, TO=263, TRAIL=264, TRANSACTION=265, TYPE=266, 
		TYPES=267, UNDIRECTED=268, VERTEX=269, VERTICES=270, WALK=271, WRITE=272, 
		TRUTH_VALUE=273, LEFT_ARROW=274, RIGHT_ARROW=275, BRACKET_RIGHT_ARROW=276, 
		LEFT_ARROW_BRACKET=277, DOUBLE_COLON=278, DOUBLE_MINUS_SIGN=279, DOUBLE_PERIOD=280, 
		DOUBLE_SOLIDUS=281, DOUBLED_GRAVE_ACCENT=282, MINUS_LEFT_BRACKET=283, 
		RIGHT_BRACKET_MINUS=284, TILDE_LEFT_BRACKET=285, RIGHT_BRACKET_TILDE=286, 
		BRACKET_TILDE_RIGHT_ARROW=287, LEFT_ARROW_TILDE_BRACKET=288, TILDE_RIGHT_ARROW=289, 
		LEFT_ARROW_TILDE=290, LEFT_MINUS_RIGHT=291, MINUS_SLASH=292, SLASH_MINUS=293, 
		SLASH_MINUS_RIGHT=294, LEFT_MINUS_SLASH=295, TILDE_SLASH=296, SLASH_TILDE=297, 
		SLASH_TILDE_RIGHT=298, LEFT_TILDE_SLASH=299, AMPERSAND=300, ASTERISK=301, 
		CIRCUMFLEX=302, COLON=303, COMMA=304, DOLLAR_SIGN=305, DOUBLE_QUOTE=306, 
		EXCLAMATION_MARK=307, GRAVE_ACCENT=308, MINUS_SIGN=309, PERCENT=310, PERIOD=311, 
		PLUS_SIGN=312, QUESTION_MARK=313, QUOTE=314, SEMICOLON=315, SOLIDUS=316, 
		TILDE=317, VERTICAL_BAR=318, CONCATENATION=319, MULTISET_ALTERNATION=320, 
		GEQ=321, LEQ=322, NEQ=323, LT=324, GT=325, EQ=326, LEFT_BRACE=327, RIGHT_BRACE=328, 
		LEFT_BRACKET=329, RIGHT_BRACKET=330, LEFT_ANGLE_BRACKET=331, RIGHT_ANGLE_BRACKET=332, 
		LEFT_PAREN=333, RIGHT_PAREN=334, NEWLINE=335, ID=336, WORD=337;
	public static final int
		RULE_file = 0, RULE_query = 1, RULE_queryConjunction = 2, RULE_queryExpr = 3, 
		RULE_focusedQueryExpr = 4, RULE_ambientQueryExpr = 5, RULE_matchClause = 6, 
		RULE_whereClause = 7, RULE_returnStatement = 8, RULE_pathPatternList = 9, 
		RULE_pathPattern = 10, RULE_pathPatternPrefix = 11, RULE_pathPatternExpression = 12, 
		RULE_pathPatternUnion = 13, RULE_pathTerm = 14, RULE_path = 15, RULE_nodePattern = 16, 
		RULE_edgePattern = 17, RULE_fullEdgePointingLeft = 18, RULE_fullEdgeUndirected = 19, 
		RULE_fullEdgePointingRight = 20, RULE_elementPatternFiller = 21, RULE_propertyList = 22, 
		RULE_returnList = 23, RULE_returnItem = 24, RULE_setOperator = 25, RULE_unionOperator = 26, 
		RULE_otherSetOperator = 27, RULE_setQuantifier = 28, RULE_len = 29, RULE_quantifier = 30, 
		RULE_expr = 31, RULE_isLabelExpr = 32, RULE_labelExpression = 33, RULE_labelTerm = 34, 
		RULE_labelFactor = 35, RULE_labelNegation = 36, RULE_labelPrimary = 37, 
		RULE_label = 38, RULE_labelWildcard = 39, RULE_parenthesizedLabelExpression = 40, 
		RULE_comparator = 41, RULE_booleanComparator = 42, RULE_compOp = 43, RULE_graphName = 44, 
		RULE_name = 45, RULE_value = 46, RULE_pathVariable = 47, RULE_elementVariable = 48, 
		RULE_key = 49;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "query", "queryConjunction", "queryExpr", "focusedQueryExpr", 
			"ambientQueryExpr", "matchClause", "whereClause", "returnStatement", 
			"pathPatternList", "pathPattern", "pathPatternPrefix", "pathPatternExpression", 
			"pathPatternUnion", "pathTerm", "path", "nodePattern", "edgePattern", 
			"fullEdgePointingLeft", "fullEdgeUndirected", "fullEdgePointingRight", 
			"elementPatternFiller", "propertyList", "returnList", "returnItem", "setOperator", 
			"unionOperator", "otherSetOperator", "setQuantifier", "len", "quantifier", 
			"expr", "isLabelExpr", "labelExpression", "labelTerm", "labelFactor", 
			"labelNegation", "labelPrimary", "label", "labelWildcard", "parenthesizedLabelExpression", 
			"comparator", "booleanComparator", "compOp", "graphName", "name", "value", 
			"pathVariable", "elementVariable", "key"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "'<-'", "'->'", 
			"']->'", "'<-['", "'::'", "'--'", "'..'", "'//'", "'``'", "'-['", "']-'", 
			"'~['", "']~'", "']~>'", "'<~['", "'~>'", "'<~'", "'<->'", "'-/'", "'/-'", 
			"'/->'", "'<-/'", "'~/'", "'/~'", "'/~>'", "'<~/'", "'&'", "'*'", "'^'", 
			"':'", "','", "'$'", "'\"'", "'!'", "'`'", "'-'", "'%'", "'.'", "'+'", 
			"'?'", "'''", "';'", "'/'", "'~'", "'|'", "'||'", "'|+|'", "'>='", "'<='", 
			"'<>'", null, null, "'='", "'{'", "'}'", "'['", "']'", "'<'", "'>'", 
			"'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ON", "COMMENT", "LINE_COMMENT", "WS", "UNSIGNED_INTEGER", "KEYWORD", 
			"ABS", "ACOS", "ADD", "AGGREGATE", "ALIAS", "ALL", "AND", "ANY", "ARRAY", 
			"AS", "ASC", "ASCENDING", "ASIN", "AT", "ATAN", "AVG", "BINARY", "BOOLEAN", 
			"BOTH", "BY", "CALL", "CASE", "CATALOG", "CEIL", "CEILING", "CHARACHTER", 
			"CHARACTER_LENGTH", "CLEAR", "CLONE", "CLOSE", "COLLECT", "COMMIT", "CONSTRAINT", 
			"CONSTANT", "CONSTRCUT", "COPY", "COS", "COSH", "COST", "COT", "COUNT", 
			"CURRENT_DATE", "CURRENT_GRAPH", "CURRENT_PROPERTY_GRAPH", "CURRENT_ROLE", 
			"CURRENT_SCHEMA", "CURRENT_TIME", "CURRENT_TIMESTAMP", "CURRENT_USER", 
			"CREATE", "DATE", "DATETIME", "DECIMAL", "DEFAULT", "DEGREES", "DELETE", 
			"DETACH", "DESC", "DESCENDING", "DIRECTORIES", "DIRECTORY", "DISTINCT", 
			"DO", "DROP", "DURATION", "ELSE", "END", "ENDS", "EMPTY_BINDING_TABLE", 
			"EMPTY_GRAPH", "EMPTY_PROPERTY_GRAPH", "EMPTY_TABLE", "EXCEPT", "EXISTS", 
			"EXISTING", "EXP", "EXPLAIN", "FALSE", "FILTER", "FLOAT", "FLOAT32", 
			"FLOAT64", "FLOAT128", "FLOOR", "FOR", "FROM", "FUNCTOPM", "FUNCTIONS", 
			"GQLSTATUS", "GROUP", "HAVING", "HOME_GRAPH", "HOME_PROPERTY_GRAPH", 
			"HOME_SCHEMA", "IN", "INSERT", "INTEGER", "INTEGER8", "INTEGER16", "INTEGER32", 
			"INTEGER64", "INTEGER128", "INTERSECT", "IF", "IS", "KEEP", "LEADING", 
			"LEFT", "LENGTH", "LET", "LIKE", "LIMIT", "LIST", "LN", "LOCALDATETIME", 
			"LOCALTIME", "LOCALTIMESTAMP", "LOG", "LOG10", "LOWER", "MANDATORY", 
			"MAP", "MATCH", "MERGE", "MAX", "MIN", "MOD", "MULTI", "MULTIPLE", "MULTISET", 
			"NEW", "NOT", "NORMALIZE", "NOTHING", "NULL", "OCTET_LENGTH", "OF", "OFFSET", 
			"OPTIONAL", "OR", "ORDER", "ORDERED", "OTHERWISE", "PARAMETER", "PATH", 
			"PATHS", "PARTITION", "POWER", "PROCEDURE", "PROCEDURES", "PRODUCT", 
			"PROFILE", "PROJECT", "QUERIES", "QUERY", "RADIANS", "RCORD", "RECORDS", 
			"REFERENCE", "REMOVE", "RENAME", "REPLACE", "REQUIRE", "RESET", "RESULT", 
			"RETURN", "RIGHT", "ROLLBACK", "SCALAR", "SCHEMA", "SCHEMAS", "SCHEMATA", 
			"SELECT", "SESSION", "SET", "SIN", "SINGLE", "SINH", "SQRT", "START", 
			"STARTS", "STRING", "SUBSTRING", "SUM", "TAN", "TANH", "THEN", "TIME", 
			"TIMESTAMP", "TRAILING", "TRIM", "TRUE", "TRUNCATE", "UNION", "UNIT", 
			"UNIT_BINDING_TABLE", "UNIT_TABLE", "UNIQUE", "UNNEST", "UNKNOWN", "UNWIND", 
			"UPPER", "USE", "VALUE", "VALUES", "WHEN", "WHERE", "WITH", "WORKING_GRAPH", 
			"XOR", "YIELD", "ZERO", "ACYCLIC", "BINDING", "CLASS_ORIGIN", "COMMAND_FUNCTION", 
			"COMMAND_FUNCTION_CODE", "CONDITION_NUMBER", "CONNECTING", "DESTINATION", 
			"DIRECTED", "EDGE", "EDGES", "FINAL", "GRAPH", "GRAPHS", "GROUPS", "INDEX", 
			"LABEL", "LABELS", "MESSAGE_TEXT", "MUTABLE", "NFC", "NFD", "NFKC", "NFKD", 
			"NODE", "NODES", "NORMALIZED", "NUMBER", "ONLY", "ORDINALITY", "PATTERN", 
			"PATTERNS", "PROPERTY", "PROPERTIES", "READ", "RELATIONSHIP", "RELATIONSHIPS", 
			"RETURNED_GQLSTATUS", "SHORTEST", "SIMPLE", "SUBCLASS_ORIGIN", "TABLE", 
			"TABLES", "TIES", "TO", "TRAIL", "TRANSACTION", "TYPE", "TYPES", "UNDIRECTED", 
			"VERTEX", "VERTICES", "WALK", "WRITE", "TRUTH_VALUE", "LEFT_ARROW", "RIGHT_ARROW", 
			"BRACKET_RIGHT_ARROW", "LEFT_ARROW_BRACKET", "DOUBLE_COLON", "DOUBLE_MINUS_SIGN", 
			"DOUBLE_PERIOD", "DOUBLE_SOLIDUS", "DOUBLED_GRAVE_ACCENT", "MINUS_LEFT_BRACKET", 
			"RIGHT_BRACKET_MINUS", "TILDE_LEFT_BRACKET", "RIGHT_BRACKET_TILDE", "BRACKET_TILDE_RIGHT_ARROW", 
			"LEFT_ARROW_TILDE_BRACKET", "TILDE_RIGHT_ARROW", "LEFT_ARROW_TILDE", 
			"LEFT_MINUS_RIGHT", "MINUS_SLASH", "SLASH_MINUS", "SLASH_MINUS_RIGHT", 
			"LEFT_MINUS_SLASH", "TILDE_SLASH", "SLASH_TILDE", "SLASH_TILDE_RIGHT", 
			"LEFT_TILDE_SLASH", "AMPERSAND", "ASTERISK", "CIRCUMFLEX", "COLON", "COMMA", 
			"DOLLAR_SIGN", "DOUBLE_QUOTE", "EXCLAMATION_MARK", "GRAVE_ACCENT", "MINUS_SIGN", 
			"PERCENT", "PERIOD", "PLUS_SIGN", "QUESTION_MARK", "QUOTE", "SEMICOLON", 
			"SOLIDUS", "TILDE", "VERTICAL_BAR", "CONCATENATION", "MULTISET_ALTERNATION", 
			"GEQ", "LEQ", "NEQ", "LT", "GT", "EQ", "LEFT_BRACE", "RIGHT_BRACE", "LEFT_BRACKET", 
			"RIGHT_BRACKET", "LEFT_ANGLE_BRACKET", "RIGHT_ANGLE_BRACKET", "LEFT_PAREN", 
			"RIGHT_PAREN", "NEWLINE", "ID", "WORD"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GqlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GqlParser.EOF, 0); }
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GqlParserListener ) ((GqlParserListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GqlParserListener ) ((GqlParserListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GqlParserVisitor ) return ((GqlParserVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			query();
			setState(101);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryContext extends ParserRuleContext {
		public QueryExprContext queryExpr() {
			return getRuleContext(QueryExprContext.class,0);
		}
		public QueryConjunctionContext queryConjunction() {
			return getRuleContext(QueryConjunctionContext.class,0);
		}
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GqlParserListener ) ((GqlParserListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GqlParserListener ) ((GqlParserListener)listener).exitQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GqlParserVisitor ) return ((GqlParserVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_query);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			queryExpr();
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXCEPT || _la==INTERSECT || _la==OTHERWISE || _la==UNION) {
				{
				setState(104);
				queryConjunction();
				setState(105);
				query();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryConjunctionContext extends ParserRuleContext {
		public SetOperatorContext setOperator() {
			return getRuleContext(SetOperatorContext.class,0);
		}
		public TerminalNode OTHERWISE() { return getToken(GqlParser.OTHERWISE, 0); }
		public QueryConjunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_queryConjunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GqlParserListener ) ((GqlParserListener)listener).enterQueryConjunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GqlParserListener ) ((GqlParserListener)listener).exitQueryConjunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GqlParserVisitor ) return ((GqlParserVisitor<? extends T>)visitor).visitQueryConjunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryConjunctionContext queryConjunction() throws RecognitionException {
		QueryConjunctionContext _localctx = new QueryConjunctionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_queryConjunction);
		try {
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EXCEPT:
			case INTERSECT:
			case UNION:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				setOperator();
				}
				break;
			case OTHERWISE:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				match(OTHERWISE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryExprContext extends ParserRuleContext {
		public FocusedQueryExprContext focusedQueryExpr() {
			return getRuleContext(FocusedQueryExprContext.class,0);
		}
		public AmbientQueryExprContext ambientQueryExpr() {
			return getRuleContext(AmbientQueryExprContext.class,0);
		}
		public QueryExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_queryExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GqlParserListener ) ((GqlParserListener)listener).enterQueryExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GqlParserListener ) ((GqlParserListener)listener).exitQueryExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GqlParserVisitor ) return ((GqlParserVisitor<? extends T>)visitor).visitQueryExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryExprContext queryExpr() throws RecognitionException {
		QueryExprContext _localctx = new QueryExprContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_queryExpr);
		try {
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FROM:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				focusedQueryExpr();
				}
				break;
			case MANDATORY:
			case MATCH:
			case OPTIONAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				ambientQueryExpr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
